web calismasi ve dosya islemleri

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /JavaDosyaIslemleri/nbproject/private/
 /JavaDosyaIslemleri/build/
+/webCalismasi/nbproject/private/
+/OopDers/nbproject/private/
+/OopDers/build/
